[package]
name = "rustls-openssl-post-quantum"
authors = ["Tom Fay <tom@teamfay.co.uk>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Experimental Rustls post-quantum key exchanges using OpenSSL and liboqs"
homepage = "https://github.com/tofay/rustls-openssl-post-quantum"
repository = "https://github.com/tofay/rustls-openssl-post-quantum"
documentation = "https://docs.rs/rustls-openssl-post-quantum"
readme = "README.md"
keywords = ["rustls", "openssl", "post-quantum", "liboqs"]
categories = ["cryptography", "security", "networking"]

[dependencies]
foreign-types = "0.3.1"
openssl = "0.10.68"
openssl-sys = "0.9.104"
rustls = { version = "0.23.20", default-features = false }

[dev-dependencies]
env_logger = "0.11.5"
once_cell = "1.20.2"
rustls = "0.23.20"
rustls-openssl = "0.2.0"
rustls-post-quantum = "0.2.1"
webpki-roots = "0.26.7"

[build-dependencies]
pkg-config = "0.3.31"
