[package]
name = "rustls-liboqs"
authors = ["Tom Fay <tom@teamfay.co.uk>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Experimental Rustls post-quantum key exchanges using OpenSSL and liboqs"
homepage = "https://github.com/tofay/rustls-liboqs"
repository = "https://github.com/tofay/rustls-liboqs"
documentation = "https://docs.rs/rustls-liboqs"
readme = "README.md"
keywords = ["rustls", "openssl", "post-quantum", "liboqs"]
categories = ["cryptography", "network-programming"]

[dependencies]
foreign-types = "0.3.1"
openssl = "0.10.68"
openssl-sys = "0.9.104"
rustls = { version = "0.23.20", default-features = false }
zeroize = "1.8.1"

[dev-dependencies]
env_logger = "0.11.5"
once_cell = "1.20.2"
rustls = "0.23.20"
rustls-openssl = "0.2.0"
rustls-post-quantum = "0.2.1"
webpki-roots = "0.26.7"

[build-dependencies]
pkg-config = "0.3.31"
